Optimization and bug fix